@@ -933,7 +933,7 @@ boolean atme;
 		break;
 
 	case SPE_CURE_BLINDNESS:
-		healup(0, 0, FALSE, TRUE);
+		healup(0, 0, FALSE, TRUE, FALSE);
 		break;
 	case SPE_CURE_SICKNESS:
 		if (Sick) You("are no longer ill.");
@@ -942,7 +942,7 @@ boolean atme;
 		    Slimed = 0;
 		 /* flags.botl = 1; -- healup() handles this */
 		}
-		healup(0, 0, TRUE, FALSE);
+		healup(0, 0, TRUE, FALSE, FALSE);
 		break;
 	case SPE_CREATE_FAMILIAR:
 		(void) make_familiar((struct obj *)0, u.ux, u.uy, FALSE);
